2012-11-28: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/DNS.pm: replace use of query() with send(), since it
   is never appropriate to append the default domain, and using send()
   paves the way to using bgsend() in the future for async dns.
   Contributed by Mark Martinec.

2012-11-28: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/MessageParser.pm: rewrite of line parsing logic to
   avoid unnecessary copying of the internal buffer. This replaces use
   of $self->{buf} with ${$self->{buf_ref}} in many places. Patch
   contributed by Mark Martinec.

2012-11-28: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: throw proper error message if an invalid
   algorithm is requested
 * lib/Mail/DKIM/PublicKey.pm: further refinement to fix Perl warning
   about use of uninitialized value

2011-04-21: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/PublicKey.pm: fix a Perl warning about use of an
   uninitialized value (reported by hsk@fli-leibniz.de)

 -- VERSION 0.39 --

2010-11-14: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Signer.pm: fix an unusual error message given when
   no Key argument has been specified and it is time to load the
   key

2010-06-11: Jason Long <jlong@messiah.edu>
 * t/signer_dk.t: create regression tests for DomainKeys signature
   generation

2010-06-11: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm, Signer.pm, Algorithm/Base.pm
   (finish_header): provide reference to entire list of headers at
   completion of header, so that canonicalizers do not need to store
   their own copy of the header
 * lib/Mail/DKIM/Canonicalization/DkimCommon.pm: do not store header as
   parsed, rather only canonicalize header within finish_header()
 * lib/Mail/DKIM/Canonicalization/DkCommon.pm: do not store header as
   parsed, rather only canonicalize header within finish_header()
 * lib/Mail/DKIM/Canonicalization/Base.pm (finish_header): change API
 * t/simple_canonicalization.t: update for the API change of